k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-morty-frontend
  namespace: rick-morty
  labels:
    app: rick-morty-frontend
spec:
  type: ClusterIP
  selector:
    app: rick-morty-frontend
  ports:
    - port: 80
      targetPort: 4008
      protocol: TCP
      name: http
